fix emojione svg elements size to prevent text overflow

--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -111,6 +111,11 @@
     line-height: 1.6;
   }
 
+  svg.emojione {
+    width: 18px;
+    height: 18px;
+  }
+
   h1, h2, h3, h4, h5 {
     font-weight: 900;
 
