--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -118,12 +118,17 @@ div.topic-list {
             text-transform: uppercase;
           }
 
-          div.topic-headline {
+          div.topic-headline-inner {
             padding-top: 15px;
             font-family: $oc_headers_font;
             font-size: 20px;
             line-height: 1.2;
             color: $oc_gray_5;
+
+            svg.emojione {
+              width: 20px;
+              height: 20px;
+            }
           }
 
           div.topic-body {
@@ -136,6 +141,11 @@ div.topic-list {
             font-family: $oc_headers_font;
             font-size: 12px;
             line-height: 1.3;
+
+            svg.emojione {
+              width: 12px;
+              height: 12px;
+            }
 
             *{
               font-family: $oc_headers_font;
